# data-pipeline-tool

./: .gitignore  README.md  main.py  pyproject.toml
.dagger/: pyproject.toml
.dagger/src/monorepo_dagger/: __init__.py  main.py
apps/crm-ingestion-job/: pyproject.toml
apps/crm-ingestion-job/src/crm_ingestion_job/: __init__.py
apps/example-jobs/: Dockerfile  main.py  pyproject.toml
libs/py-utils/: pyproject.toml
libs/py-utils/src/py_utils/: __init__.py
libs/py-utils/src/py_utils/common/: logger.py
libs/py-utils/src/py_utils/google/api/: __init__.py  drive.py  sheet.py
libs/py-utils/src/py_utils/google/console/: bigquery.py  gcs.py  storage.py
libs/py-utils/src/py_utils/macros/: date.py
libs/py-utils/src/py_utils/notify/: sendgrid.py  slack.py  stmp.py
libs/py-utils/src/py_utils/sftp/: connection.py  transfer.py
libs/py-utils/src/py_utils/template/: templater.py
libs/py-utils/src/py_utils/template/macros/: datatime.py
libs/py-utils/src/py_utils/template/parsing/: json_parsing.py  yaml_parsing.py
libs/py-utils/src/py_utils/template/variables/: file.py
libs/py-utils/src/py_utils/threading/: pool.py
libs/py-utils/src/py_utils/utils/: file.py  path.py
libs/py-workflow/: pyproject.toml
libs/py-workflow/src/py_workflow/: __init__.py
libs/py-workflow/src/py_workflow/entity/: pipeline.py
libs/py-workflow/src/py_workflow/operators/: alert_threshold.py  api_to_bigquery.py  api_to_gcs.py  base.py  bigquert_to_bigquery.py  bigquery_job_alert.py  bigquery_to_drive.py  bigquery_to_gcs.py  bigquery_to_sftp.py  bigquery_to_sheet.py  dataform_alert.py  deduplicate_sheet.py  sheet_to_biquery.py  sheet_to_sheet.py  slack_alert.py
libs/py-workflow/src/py_workflow/pipeline/: alert.py  (+7 more)
