[project]
name = "data-pipeline-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagger>=1.3.0",
    "google-api-python-client>=2.164.0",
    "loguru>=0.7.3",
    "oauth2client>=4.1.3",
]

[tool.uv.workspace]
members = ["libs/py-workflow", "apps/crm-ingestion-job", "libs/py-utils", "apps/example-jobs"]
