[project]
name = "crm-ingestion-job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tuan-nguyen3-ts", email = "tuan.nguyen3@trustingsocial.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
crm-ingestion-job = "crm_ingestion_job:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
