[project]
name = "py-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tuan-nguyen3-ts", email = "tuan.nguyen3@trustingsocial.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
